--- a/index.html
+++ b/index.html
@@ -148,10 +148,7 @@
     </main>
     <footer>
         <p>you can put social media links here too:
-            <br><a href="https://bsky.app">bsky</a> | <a
-                href="https://www.instagram.com">instagram</a> | <a
-                href="https://tumblr.com/">tumblr</a> | <a href="https://ko-fi.com">tip
-                jar</a> | <a href="mailto:your@email.address">email</a>
+            <br> <a href="mailto:your@email.address">email</a>
     </footer>
 
 </body>
