--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
         I don't know, but I'll learn.
 
         <nav>
-            <a href="/about">
-                your navigation
+            <a href="/experience">
+                experience
             </a>
-            <a href="/comics">
-                links
+            <a href="/education">
+                education
             </a>
-            <a href="/illustration">
-                go
+            <a href="/hobbies">
+                hobbies
             </a>
-            <a href="/links">
-                here!
+            <a href="/contacts">
+                contacts
             </a>
         </nav>
     </header>
