--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
             Kianna Ng
             </a>
         </h1>
-        I don't know, but I'll learn.
 
         <nav>
             <a href="/experience">
@@ -50,7 +49,23 @@
     </header>
 
     <main>
-        <h2>a very simple portfolio code template!</h2>
+        <h2>I don't know, but I'll learn.</h2>
+
+        <div class="/experience">
+            <P>
+                IoT4Ag Engineering Undergraduate Research Assistant
+            </P>
+            <p>Sep 2023 - Aug 2024</p>
+            <ul>
+                <li>
+                    you can also make lists
+                </li>
+                <li>
+                    you can also make lists
+                </li>
+            </ul>
+        </div>
+
         <p>
         <div class="box center">
             <b>how to grab this code:</b>
