--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>
         Kianna Ng
     </title>
-    <link rel="icon" type="image/x-icon" href="favicon-goes-here.png">
+    <link rel="icon" type="image/x-icon" href="https://www.flaticon.com/free-icons/leaf" title="leaf icons">Leaf icons created by Pixel perfect - Flaticon> 
     <!-- the icon that shows up in the address bar -->
 
     <!-- HTML Meta Tags-->
@@ -33,25 +33,27 @@
         </h1>
 
         <nav>
-            <a href="/experience">
+            <a href="#experience">
                 experience
             </a>
-            <a href="/education">
+            <a href="#education">
                 education
             </a>
-            <a href="/hobbies">
+            <a href="#hobbies">
                 hobbies
             </a>
-            <a href="/contacts">
-                contacts
+            <a href="#contact">
+                contact me!
             </a>
         </nav>
     </header>
 
     <main>
         <h2>I don't know, but I'll learn.</h2>
+        <header></header>
 
         <div class="/experience">
+            <h1> Experience </h1>
             <P>
                 IoT4Ag Engineering Undergraduate Research Assistant
             </P>
