--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>
         Kianna Ng
     </title>
-    <link rel="icon" type="image/x-icon" href="https://www.flaticon.com/free-icons/leaf" title="leaf icons">Leaf icons created by Pixel perfect - Flaticon> 
+    <link rel="icon" type="image/x-icon" href="leaf.png">
     <!-- the icon that shows up in the address bar -->
 
     <!-- HTML Meta Tags-->
@@ -42,18 +42,16 @@
             <a href="#hobbies">
                 hobbies
             </a>
-            <a href="#contact">
-                contact me!
+            <a href="#contacts">
+                contacts
             </a>
         </nav>
     </header>
 
     <main>
         <h2>I don't know, but I'll learn.</h2>
-        <header></header>
 
         <div class="/experience">
-            <h1> Experience </h1>
             <P>
                 IoT4Ag Engineering Undergraduate Research Assistant
             </P>
