--- a/index.html
+++ b/index.html
@@ -52,10 +52,12 @@
         <h2>I don't know, but I'll learn.</h2>
 
         <div class="/experience">
-            <P>
+            <div class="box center">
+            <b>experience</b>
+                <P>
                 IoT4Ag Engineering Undergraduate Research Assistant
-            </P>
-            <p>Sep 2023 - Aug 2024</p>
+                </P>
+                <p>Sep 2023 - Aug 2024</p>
             <ul>
                 <li>
                     you can also make lists
@@ -64,6 +66,8 @@
                     you can also make lists
                 </li>
             </ul>
+
+            </div>
         </div>
 
         <p>
