--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <h2>I don't know, but I'll learn.</h2>
 
         <div class="/experience">
-            <div class="box center">
-            <b>experience</b>
+            <div class="box">
+            <b>Experience</b>
                 <P>
                 IoT4Ag Engineering Undergraduate Research Assistant
                 </P>
