--- a/index.html
+++ b/index.html
@@ -53,18 +53,19 @@
 
         <div class="/experience">
             <div class="box">
-            <b>Experience</b>
+            <h1>Experience</h1>
+            <b></b>
                 <P>
                 IoT4Ag Engineering Undergraduate Research Assistant
                 </P>
                 <p>Sep 2023 - Aug 2024</p>
             <ul>
-                <li>
-                    you can also make lists
-                </li>
-                <li>
-                    you can also make lists
-                </li>
+                <li>Trained a classifier using TensorFlow for infrared camera images and temperature data to automatically stop a vertical moving actuator attached to the field robot.</li>
+                <li>Collected and analyzed infrared camera images and temperature data using Python and ROS2 for further comparison in leaf moisture and irrigation studies.</li>
+                <li>Worked with LoRa (long-range radio) Arduinos to send data over long distances in the field.</li>
+                <li>Implemented code in Python to interface LoRa using ROS2 Humble and Arduino Sketches.</li>
+                <li>Aided in testing navigation stacks using satellite GPS and Husky UGV from Clearpath Robotics.</li>
+                <li>Engaged in recurring update meetings with UC Merced PhD Students and UC Merced Robotics Professor.</li>
             </ul>
 
             </div>
