--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>
         Kianna Ng
     </title>
-    <link rel="icon" type="image/x-icon" href="leaf.png">
+    <link rel="icon" type="image/x-icon" href="blossom.png">
     <!-- the icon that shows up in the address bar -->
 
     <!-- HTML Meta Tags-->
