--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
     <main>
         <h2>I don't know, but I'll learn.</h2>
 
-        <div class="/experience">
+        <div class="experience">
             <div class="box">
             <h3>Experience</h3>
+
                 <b>
                 IoT4Ag Engineering Undergraduate Research Assistant
                 </b>
@@ -67,6 +68,32 @@
                 <li>Engaged in recurring update meetings with UC Merced PhD Students and UC Merced Robotics Professor.</li>
             </ul>
 
+            <b>
+            Inclusive Interactive Lab Project Intern
+            </b>
+            <p>Oct 2022 - Dec 2022</p>
+            <ul>
+                <li>Organized and scheduled test subjects for the in-person lab study.</li>
+                <li>Cooperated and learned closely from graduate students and professors throughout the lab.</li>
+                <li>Set up the lab study atmosphere and aided in conducting various test cases.</li>
+                <li>Paper published in CHI '24: Proceedings of the CHI Conference on Human Factors in Computing Systems.</li>
+            </ul>
+
+            <b>Merced nAnomaterials Center for Energy and Sensing Student Assistant / Web Developer</b>
+            <p>Dec 2020 - Jan 2022</p>
+            <ul>
+                <li>Gathered and organized program research and education outputs to produce detailed semi-annual progress reports to NASA.</li>
+                <li>Revised material to update the MACES website and Center Director’s lab website.</li>
+                <li>Updated the MACES website and Center Director’s lab website using HTML and Squarespace.</li>
+                <li>Organized and recorded detailed notes for financial meetings and monthly staff meetings.</li>
+            </ul>
+
+            <h3>Google CSSI Student</h3>
+            <p>Jul 2020 - Jul 2020</p>
+            <ul>
+                <li>Led and developed a highly interactive application using JavaScript and Glitch visualizing and creating music using oscillating shapes and colors.</li>
+                <li>Engaged in community leadership discussions with software developer leaders to discuss updates on the project and brainstorm new ideas.</li>
+            </ul>
             </div>
         </div>
 
