--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         <h2>I don't know, but I'll learn.</h2>
 
         <div class="experience">
+            <section id="experience">
             <div class="box">
             <h3>Experience</h3>
 
@@ -88,13 +89,14 @@
                 <li>Organized and recorded detailed notes for financial meetings and monthly staff meetings.</li>
             </ul>
 
-            <h3>Google CSSI Student</h3>
+            <b>Google CSSI Student</b>
             <p>Jul 2020 - Jul 2020</p>
             <ul>
                 <li>Led and developed a highly interactive application using JavaScript and Glitch visualizing and creating music using oscillating shapes and colors.</li>
                 <li>Engaged in community leadership discussions with software developer leaders to discuss updates on the project and brainstorm new ideas.</li>
             </ul>
             </div>
+            </section>
         </div>
 
         <p>
