--- a/index.html
+++ b/index.html
@@ -147,10 +147,12 @@
         <!-- don't get rid of this div, even though it looks empty - this is what makes your image lightbox work! -->
 
     </main>
+    <section id="contacts">
     <footer>
         <p>contact me!
-            <br> <a href="mailto:your@email.address">linked in</a>
+            <br> <a href="https://www.linkedin.com/in/kianna-ng-1b95041aa/">linked in</a>
     </footer>
+    </section>
 
 </body>
 
