--- a/index.html
+++ b/index.html
@@ -126,22 +126,37 @@
             </div>
             </section>
         </div>
-        
-        <div class="hobbies">
-            <section id="hobbies">
-            <div class="box">
-            <h3>Hobbies</h3>
 
-            <b>Collecting</b>
-            <b>Gaming</b>
-            <b>Cooking</b>
+        <h3>Hobbies</h3>
+        <div id="gallery" class="columns">
+        <section id="hobbies">
+            <p>
+            <div class="box">I enjoy collecting trinkets, gaming, photography, traveling, and food!</div>
+
+            <figure>
+                <img src="images/300x300.png">
+                <figcaption>
+                    you can use the <code>figure & figcaption</code> elements if you want to add captions to your images
+                </figcaption>
+            </figure>
+            <img src="hobbies/plane.jpg">
+            <img src="hobbies/frogfood.jpg">
+            <img src="hobbies/pokemon2.jpg">
+            <img src="hobbies/sonnyall">
+            <img src="hobbies/food2.jpg">
+            <img src="hobbies/dimsum.jpg">
+            <img src="hobbies/sonnyblossom.jpg">
+            <img src="hobbies/traveling2.jpg">
+            <img src="hobbies/sonnycoffee.jpg">
+            <img src="hobbies/pokemon3.jpg">
+            <img src="hobbies/food.jpg">
+            <img src="hobbies/food3.jpg">
+            <img src="hobbies/pokemon.jpg">
 
 
-            </div>
-            </section>
+            Fun fact: I am an affiliate on Twitch. :D
+        </section>
         </div>
-
-        <hr>
 
         <div id="lightbox" popover></div>
         <!-- don't get rid of this div, even though it looks empty - this is what makes your image lightbox work! -->
