--- a/index.html
+++ b/index.html
@@ -132,13 +132,6 @@
         <section id="hobbies">
             <p>
             <div class="box">I enjoy collecting trinkets, gaming, photography, traveling, and food!</div>
-
-            <figure>
-                <img src="images/300x300.png">
-                <figcaption>
-                    you can use the <code>figure & figcaption</code> elements if you want to add captions to your images
-                </figcaption>
-            </figure>
             <img src="hobbies/plane.jpg">
             <img src="hobbies/frogfood.jpg">
             <img src="hobbies/pokemon2.jpg">
@@ -153,8 +146,22 @@
             <img src="hobbies/food3.jpg">
             <img src="hobbies/pokemon.jpg">
 
+            <figure>
+                <img src="hobbies/photo.jpg">
+                <img src="hobbies/photo2.jpg">
+                <figcaption>
+                    Graduation photos taken on a Nikon DSLR and edited with Adobe Lightroom
+                </figcaption>
+            </figure>
 
-            Fun fact: I am an affiliate on Twitch. :D
+            <figure>
+                <img src="hobbies/photo3.jpg">
+                <figcaption>
+                    Late night photography taken on a Canon Digicam
+                </figcaption>
+            </figure>
+
+            <div class="box">I am also an affiliate on Twitch :D</div>
         </section>
         </div>
 
