--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <img src="hobbies/plane.jpg">
             <img src="hobbies/frogfood.jpg">
             <img src="hobbies/pokemon2.jpg">
-            <img src="hobbies/sonnyall">
+            <img src="hobbies/sonnysall">
             <img src="hobbies/food2.jpg">
             <img src="hobbies/dimsum.jpg">
             <img src="hobbies/sonnyblossom.jpg">
