--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <!-- the icon that shows up in the address bar -->
 
     <!-- HTML Meta Tags-->
-    <meta property="og:type" content="website" />
-    <meta name="description" content="describe your site for search engines + social media links!" />
-    <meta property="og:image" content="put a link to your preview image for social media here.jpg">
+    <meta property="og:type" content="Kianna Ng" />
+    <meta name="description" content="Kianna Ng's Portfolio Website" />
+    <meta property="og:image" content="preview.png">
     <meta property="og:image:type" content="image/jpg">
 </head>
 
@@ -170,7 +170,8 @@
     </main>
     <section id="contacts">
     <footer>
-        <p>contact me!
+        Thanks for Visiting
+        <p>Feel free to contact me:
             <br> <a href="https://www.linkedin.com/in/kianna-ng-1b95041aa/">linked in</a>
     </footer>
     </section>
