--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- HTML Meta Tags-->
     <meta property="og:type" content="Kianna Ng" />
     <meta name="description" content="Kianna Ng's Portfolio Website" />
-    <meta property="og:image" content="preview.png">
+    <meta property="og:image" content="images/preview.png">
     <meta property="og:image:type" content="image/jpg">
 </head>
 
@@ -159,7 +159,7 @@
                     Late night photography taken on a Canon Digicam
                 </figcaption>
             </figure>
-            
+
             <div class="box">I am also an affiliate on Twitch :D</div>
         </section>
         </div>
