--- a/index.html
+++ b/index.html
@@ -134,9 +134,10 @@
             <div class="box">I enjoy collecting trinkets, gaming, photography, traveling, and food!</div>
             <img src="hobbies/plane.jpg">
             <img src="hobbies/frogfood.jpg">
+            <img src="hobbies/japan.jpg">
             <img src="hobbies/pokemon2.jpg">
             <img src="hobbies/food3.jpg">
-            <img src="hobbies/dimsum.jpg">
+            <img src="hobbies/dimsum.heic">
             <img src="hobbies/sonnyblossom.jpg">
             <img src="hobbies/traveling2.jpg">
             <img src="hobbies/sonnycoffee.jpg">
