--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <img src="hobbies/japan.jpg">
             <img src="hobbies/pokemon2.jpg">
             <img src="hobbies/food3.jpg">
-            <img src="hobbies/dimsum.heic">
+            <img src="hobbies/dimsum.jpg">
             <img src="hobbies/sonnyblossom.jpg">
             <img src="hobbies/traveling2.jpg">
             <img src="hobbies/sonnycoffee.jpg">
