commit from laptop wsl

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <!-- the icon that shows up in the address bar -->
 
     <!-- HTML Meta Tags-->
+     <!-- OMGOMG -->
+      
     <meta property="og:type" content="Kianna Ng" />
     <meta name="description" content="Kianna Ng's Portfolio Website" />
     <meta property="og:image" content="images/preview.png">
